# lean-tiny-python-project

./: .gitignore  README.md
python/02_crowsnest/: pyproject.toml  test.py
