[tool.poetry]
name = "02_crowsnest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.1.0"
ipython = "^8.10.0"
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 80
target-version = ["py310"]
inclue = ["**/*.py"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
